# aws-catdex-serverless

./: .gitignore  Cargo.toml  README.md  bucket_policy.json  temp.json  template.yaml
