[package]
name = "catdex-serverless"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "post-cat"
path = "src/bin/lambda/post-cat.rs"

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
lambda_http = "0.9.3"
lambda_runtime = "0.9.2"
serde = "1.0.196"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

